@@ -1,47 +1,18 @@
 package net.deatrathias.khroma;
 
-import net.neoforged.neoforge.common.ModConfigSpec;
+import java.util.Arrays;
+import java.util.List;
 
-// An example config class. This is not required, but it's a good idea to have one to keep your config organized.
-// Demonstrates how to use Neo's config APIs
+import net.neoforged.neoforge.common.ModConfigSpec;
+import net.neoforged.neoforge.common.ModConfigSpec.Range;
+
 public class Config {
 	private static final ModConfigSpec.Builder BUILDER = new ModConfigSpec.Builder();
 
-	/*
-	 * public static final ModConfigSpec.BooleanValue LOG_DIRT_BLOCK = BUILDER
-	 * .comment("Whether to log the dirt block on common setup")
-	 * .define("logDirtBlock", true);
-	 * 
-	 * public static final ModConfigSpec.IntValue MAGIC_NUMBER = BUILDER
-	 * .comment("A magic number") .defineInRange("magicNumber", 42, 0,
-	 * Integer.MAX_VALUE);
-	 * 
-	 * public static final ModConfigSpec.ConfigValue<String>
-	 * MAGIC_NUMBER_INTRODUCTION = BUILDER
-	 * .comment("What you want the introduction message to be for the magic number")
-	 * .define("magicNumberIntroduction", "The magic number is... ");
-	 * 
-	 * // a list of strings that are treated as resource locations for items public
-	 * static final ModConfigSpec.ConfigValue<List<? extends String>> ITEM_STRINGS =
-	 * BUILDER .comment("A list of items to log on common setup.")
-	 * .defineListAllowEmpty("items", List.of("minecraft:iron_ingot"), () -> "",
-	 * Config::validateItemName);
-	 * 
-	 * public static final ModConfigSpec.BooleanValue WORLDGEN_CHROMIUM = BUILDER
-	 * .comment("Generate chromium ores in the world") .define("worldGenChromium",
-	 * true);
-	 * 
-	 * public static final ModConfigSpec.ConfigValue<List<? extends String>>
-	 * KHROMIC_INGOT_SOURCE = BUILDER
-	 * .comment("Which item can be used to make Khromic ingots (default to chromium ingots)"
-	 * ) .defineList("khromicIngotSource", List.of("surgeofkhroma:chromium_ingot"),
-	 * () -> "", Config::validateItemName);
-	 */
+	public static final ModConfigSpec.IntValue CHUNKS_PER_NODE = BUILDER.comment("The average number of chunks between each Khroma Node").defineInRange("chunks_per_node", 16, 1, Integer.MAX_VALUE);
+
+	public static final ModConfigSpec.ConfigValue<List<? extends Double>> KHROMA_RATE_PER_LEVEL = BUILDER.comment("Khroma rate extracted from a node based on the node level").defineList(
+			Arrays.asList("khroma_rate_per_level"), () -> Arrays.asList(100.0, 1000.0, 5000.0), () -> 0.0, (value) -> value instanceof Number && ((Number) value).doubleValue() >= 0, Range.of(2, 2));
 
 	static final ModConfigSpec SPEC = BUILDER.build();
-
-	// private static boolean validateItemName(final Object obj) {
-	// return obj instanceof String itemName &&
-	// BuiltInRegistries.ITEM.containsKey(ResourceLocation.parse(itemName));
-	// }
 }
